--- a/index.html
+++ b/index.html
@@ -112,5 +112,16 @@
   </div>
 
   <script type="module" src="main.js"></script>
+
+  <script type="importmap">
+  {
+    "imports": {
+      "three": "https://unpkg.com/three@0.161.0/build/three.module.js",
+      "three/examples/jsm/controls/PointerLockControls.js": "https://unpkg.com/three@0.161.0/examples/jsm/controls/PointerLockControls.js"
+    }
+  }
+  </script>
+
+  <script type="module" src="main.js"></script>
 </body>
 </html>
