--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Heritage Pearl Quest 3D — Bubbly</title>
+  <title>Pearl Quest 3D — Grand Edition</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -12,21 +12,24 @@
   <div id="ui">
     <!-- TOP HUD -->
     <div id="hud" class="bubblebar hidden">
-      <div class="hud-item"><strong>Time</strong> <span id="time">05:00</span></div>
-      <div class="hud-item o2wrap"><strong>O₂</strong>
+      <div class="hud-item"><strong id="lblTime">Time</strong> <span id="time">05:00</span></div>
+      <div class="hud-item o2wrap"><strong id="lblO2">O₂</strong>
         <div id="o2bar"><span id="o2fill"></span></div>
       </div>
-      <div class="hud-item"><strong>Score</strong> <span id="score">0</span></div>
-      <div class="hud-item"><strong>Bank</strong> x<span id="mult">1.0</span></div>
-      <div class="hud-item"><strong>Carried</strong> <span id="carried">0</span></div>
+      <div class="hud-item"><strong id="lblScore">Score</strong> <span id="score">0</span></div>
+      <div class="hud-item"><strong id="lblBank">Bank</strong> x<span id="mult">1.0</span></div>
+      <div class="hud-item"><strong id="lblCarry">Carried</strong> <span id="carried">0</span></div>
     </div>
+
+    <!-- Quest Chip -->
+    <div id="quest" class="chip hidden">Quest goes here…</div>
 
     <div id="crosshair">+</div>
 
     <!-- MAIN MENU -->
     <div id="menu" class="panel card">
-      <h1>Heritage Pearl Quest 3D</h1>
-      <p class="tag">Innovate Your Heritage Game</p>
+      <h1>Pearl Quest 3D</h1>
+      <p class="tag" id="tagLine">Innovate Your Heritage Game</p>
       <div class="buttons">
         <button id="btnStory" class="pill">Story</button>
         <button id="btnAdventure" class="pill">Free Dive</button>
@@ -42,8 +45,8 @@
 
     <!-- CINEMATIC INTRO -->
     <div id="cinema" class="panel card hidden">
-      <h2>Welcome to <span>Pearl Quest 3D</span></h2>
-      <p>Begin at the island—dive when you're ready.</p>
+      <h2 id="welcomeTitle">Welcome to <span>Pearl Quest 3D</span></h2>
+      <p id="welcomeSub">Begin at the island—dive when you're ready.</p>
       <button id="continueBtn" class="pill big">Click to Dive</button>
     </div>
 
@@ -52,19 +55,19 @@
 
     <!-- PAUSE -->
     <div id="pause" class="panel card hidden">
-      <h2>Paused</h2>
+      <h2 id="pausedTitle">Paused</h2>
       <div class="buttons">
         <button id="resumeBtn" class="pill">Resume</button>
         <button id="restartBtn" class="ghost">Restart</button>
         <button id="menuBtn" class="ghost">Main Menu</button>
       </div>
-      <p class="hint">Press <b>P</b> to toggle pause.</p>
+      <p class="hint" id="pausedHint">Press <b>P</b> to toggle pause.</p>
     </div>
 
     <!-- HOW TO -->
     <div id="how" class="panel card hidden">
-      <h2>How to Play</h2>
-      <ul class="how">
+      <h2 id="howTitle">How to Play</h2>
+      <ul class="how" id="howList">
         <li><b>WASD</b> move • <b>Space/Ctrl</b> up/down • <b>Shift</b> boost</li>
         <li><b>E</b> interact: collect pearls / artifacts / bank at the dhow / open chest</li>
         <li><b>P</b> pause • <b>M</b> mute • <b>F</b> fullscreen</li>
@@ -75,9 +78,9 @@
 
     <!-- SETTINGS -->
     <div id="settings" class="panel card hidden">
-      <h2>Settings</h2>
+      <h2 id="settingsTitle">Settings</h2>
       <div class="row">
-        <label>Mouse sensitivity</label>
+        <label id="sensLbl">Mouse sensitivity</label>
         <input id="sens" type="range" min="0.2" max="1.6" step="0.05" value="1"/>
       </div>
       <div class="row">
@@ -88,19 +91,23 @@
         <label>Graphics</label>
         <button id="hqBtn" class="ghost">Toggle High Quality</button>
       </div>
+      <div class="row">
+        <label>Language</label>
+        <button id="langBtn" class="pill">العربية / English</button>
+      </div>
       <button class="back pill">Back</button>
     </div>
 
     <!-- LEADERBOARD -->
     <div id="board" class="panel card hidden">
-      <h2>Top Divers</h2>
+      <h2 id="leaderTitle">Top Divers</h2>
       <ol id="leaders"></ol>
       <button class="back pill">Back</button>
     </div>
 
     <!-- CREDITS -->
     <div id="credits" class="panel card hidden">
-      <h2>Credits</h2>
+      <h2 id="creditsTitle">Credits</h2>
       <p><b>Design & Development:</b> Awaiz Ahmed — Software Engineering Student</p>
       <p>Built for <b>“Innovate Your Heritage Game”</b></p>
       <button class="back pill">Back</button>
@@ -109,9 +116,9 @@
     <!-- STORY PROMPTS -->
     <div id="prompt" class="panel card hidden small"></div>
 
-    <!-- GAME OVER -->
+    <!-- GAME OVER / WIN -->
     <div id="over" class="panel card hidden">
-      <h2>Mission Complete</h2>
+      <h2 id="overTitle">Mission Complete</h2>
       <p id="overMsg">Your score: <span id="finalScore">0</span></p>
       <div class="save">
         <input id="playerName" placeholder="Enter your name (e.g., Awaiz Ahmed)"/>
