--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pearl Quest 3D — Grand Edition</title>
+  <title>Pearl Quest 3D — Grand + Water2</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <canvas id="bg"></canvas>
-
   <div id="ui">
-    <!-- TOP HUD -->
     <div id="hud" class="bubblebar hidden">
       <div class="hud-item"><strong id="lblTime">Time</strong> <span id="time">05:00</span></div>
       <div class="hud-item o2wrap"><strong id="lblO2">O₂</strong>
@@ -20,13 +18,9 @@
       <div class="hud-item"><strong id="lblBank">Bank</strong> x<span id="mult">1.0</span></div>
       <div class="hud-item"><strong id="lblCarry">Carried</strong> <span id="carried">0</span></div>
     </div>
-
-    <!-- Quest Chip -->
     <div id="quest" class="chip hidden">Quest goes here…</div>
-
     <div id="crosshair">+</div>
 
-    <!-- MAIN MENU -->
     <div id="menu" class="panel card">
       <h1>Pearl Quest 3D</h1>
       <p class="tag" id="tagLine">Innovate Your Heritage Game</p>
@@ -34,26 +28,19 @@
         <button id="btnStory" class="pill">Story</button>
         <button id="btnAdventure" class="pill">Free Dive</button>
         <button id="btnHow" class="ghost">How to Play</button>
-        <button id="btnLeaderboard" class="ghost">Leaderboard</button>
         <button id="btnSettings" class="ghost">Settings</button>
+        <button id="btnLeaderboard" class="ghost">Leaderboard</button>
         <button id="btnCredits" class="ghost">Credits</button>
       </div>
-      <div class="bubbles">
-        <span></span><span></span><span></span><span></span><span></span>
-      </div>
+      <div class="bubbles"><span></span><span></span><span></span><span></span><span></span></div>
     </div>
 
-    <!-- CINEMATIC INTRO -->
     <div id="cinema" class="panel card hidden">
       <h2 id="welcomeTitle">Welcome to <span>Pearl Quest 3D</span></h2>
       <p id="welcomeSub">Begin at the island—dive when you're ready.</p>
       <button id="continueBtn" class="pill big">Click to Dive</button>
     </div>
 
-    <!-- Fade overlay -->
-    <div id="fade" class="hidden"></div>
-
-    <!-- PAUSE -->
     <div id="pause" class="panel card hidden">
       <h2 id="pausedTitle">Paused</h2>
       <div class="buttons">
@@ -64,19 +51,12 @@
       <p class="hint" id="pausedHint">Press <b>P</b> to toggle pause.</p>
     </div>
 
-    <!-- HOW TO -->
     <div id="how" class="panel card hidden">
       <h2 id="howTitle">How to Play</h2>
-      <ul class="how" id="howList">
-        <li><b>WASD</b> move • <b>Space/Ctrl</b> up/down • <b>Shift</b> boost</li>
-        <li><b>E</b> interact: collect pearls / artifacts / bank at the dhow / open chest</li>
-        <li><b>P</b> pause • <b>M</b> mute • <b>F</b> fullscreen</li>
-        <li>Oxygen drains <em>underwater</em>, refills on the island/surface.</li>
-      </ul>
+      <ul class="how" id="howList"></ul>
       <button class="back pill">Back</button>
     </div>
 
-    <!-- SETTINGS -->
     <div id="settings" class="panel card hidden">
       <h2 id="settingsTitle">Settings</h2>
       <div class="row">
@@ -98,14 +78,12 @@
       <button class="back pill">Back</button>
     </div>
 
-    <!-- LEADERBOARD -->
     <div id="board" class="panel card hidden">
       <h2 id="leaderTitle">Top Divers</h2>
       <ol id="leaders"></ol>
       <button class="back pill">Back</button>
     </div>
 
-    <!-- CREDITS -->
     <div id="credits" class="panel card hidden">
       <h2 id="creditsTitle">Credits</h2>
       <p><b>Design & Development:</b> Awaiz Ahmed — Software Engineering Student</p>
@@ -113,10 +91,8 @@
       <button class="back pill">Back</button>
     </div>
 
-    <!-- STORY PROMPTS -->
     <div id="prompt" class="panel card hidden small"></div>
 
-    <!-- GAME OVER / WIN -->
     <div id="over" class="panel card hidden">
       <h2 id="overTitle">Mission Complete</h2>
       <p id="overMsg">Your score: <span id="finalScore">0</span></p>
@@ -129,14 +105,16 @@
         <button class="back pill">Main Menu</button>
       </div>
     </div>
+
+    <div id="fade" class="hidden"></div>
   </div>
 
-  <!-- Import map + module -->
   <script type="importmap">
   {
     "imports": {
       "three": "https://unpkg.com/three@0.161.0/build/three.module.js",
-      "three/examples/jsm/controls/PointerLockControls.js": "https://unpkg.com/three@0.161.0/examples/jsm/controls/PointerLockControls.js"
+      "three/examples/jsm/controls/PointerLockControls.js": "https://unpkg.com/three@0.161.0/examples/jsm/controls/PointerLockControls.js",
+      "three/examples/jsm/objects/Water2.js": "https://unpkg.com/three@0.161.0/examples/jsm/objects/Water2.js"
     }
   }
   </script>
