--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pearl Quest 3D — Grand + Water2</title>
+  <title>Pearl Quest 3D — Story Water Pro</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -32,7 +32,6 @@
         <button id="btnLeaderboard" class="ghost">Leaderboard</button>
         <button id="btnCredits" class="ghost">Credits</button>
       </div>
-      <div class="bubbles"><span></span><span></span><span></span><span></span><span></span></div>
     </div>
 
     <div id="cinema" class="panel card hidden">
@@ -53,7 +52,11 @@
 
     <div id="how" class="panel card hidden">
       <h2 id="howTitle">How to Play</h2>
-      <ul class="how" id="howList"></ul>
+      <ul class="how" id="howList">
+        <li><b>WASD</b> move • <b>Space/Ctrl</b> up/down • <b>Shift</b> boost</li>
+        <li><b>E</b> interact: collect pearls/artifacts & bank at the dhow</li>
+        <li><b>P</b> pause • <b>M</b> mute • <b>F</b> fullscreen</li>
+      </ul>
       <button class="back pill">Back</button>
     </div>
 
@@ -70,10 +73,6 @@
       <div class="row">
         <label>Graphics</label>
         <button id="hqBtn" class="ghost">Toggle High Quality</button>
-      </div>
-      <div class="row">
-        <label>Language</label>
-        <button id="langBtn" class="pill">العربية / English</button>
       </div>
       <button class="back pill">Back</button>
     </div>
