--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pearl Quest 3D — Ocean Life Edition</title>
+  <title>Pearl Quest 3D — Navigation Edition</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
