--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <!-- Disable mobile zoom & fit safe areas -->
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
   <title>Pearl Quest 3D — Mobile + Desktop</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- 3D -->
+  <!-- WebGL Canvas -->
   <canvas id="bg"></canvas>
 
   <!-- UI root -->
@@ -35,6 +37,7 @@
     }
   }
   </script>
+
   <script type="module" src="main.js"></script>
 </body>
 </html>
