--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- UI root -->
   <div id="ui"></div>
 
-  <!-- Touch UI (shown only on phones/tablets via body.mobile) -->
+  <!-- Touch UI (shown on phones/tablets only during gameplay) -->
   <div id="touchUI" class="hidden">
     <div id="joyL" class="joy"><span class="knob"></span></div>
     <div id="joyR" class="joy"><span class="knob"></span></div>
